--- a/app/assets/stylesheets/layout/_topbar.sass
+++ b/app/assets/stylesheets/layout/_topbar.sass
@@ -24,7 +24,7 @@ a.site-title
 .navbar
   position: fixed
   top: 0 !important
-  z-index: 100
+  z-index: 90
   height: 45px !important
   font-size: 0.9em
   background-color: white
